<resources>
    <string name="app_name">InputOfCalories</string>

    <!-- user input errors -->

    <string name="passwords_mismatch">Passwords mismatch</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="fill_all_fields">Fill all fields</string>

    <!-- end of user input errors -->

    <!-- auth -->

    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="do_not_have_account">Don\'t have an account? <b><font color="#00574B">Register</font></b> </string>
    <string name="succeed">Succeed</string>

    <!-- auth errors -->

    <string name="registration_fail">Registration fail</string>
    <string name="sign_in_fail">Sign in fail</string>

    <string name="user_with_email_not_found_suffix">not found</string>
    <string name="incorrect_password_suffix">password</string>

    <!-- end of auth errors -->

    <!-- end of auth -->

    <!-- regular flow -->

    <string name="failed_to_load_meals">Failed to load meals</string>
    <string name="filter">Filter</string>
    <string name="daily_calories">Daily calories</string>
    <string name="set_daily_calories">Set daily calories</string>
    <string name="meals">Meals</string>

    <string name="date">Date</string>
    <string name="non">non</string>

    <string name="delete_meal_failed">Delete meal failed</string>
    <string name="delete_meal_succeed">Delete meal succeed</string>

    <string name="daily_calories_limit_exceeded">Daily calories limit exceeded</string>
    <string name="daily_calories_limit_not_exceeded">Daily calories limit not exceeded</string>
    <string name="failed_to_check_daily_calories_limit">Failed to check daily calories limit</string>

    <string name="no_meals_to_show">No meals to show</string>

    <string name="add_meal">Add meal</string>
    <string name="view_meal">View meal</string>
    <string name="done">Done</string>
    <string name="meal_add_failed">Meal add failed</string>
    <string name="meal_successfully_added">Meal successfully added</string>

    <string name="meal_edit_succeed">meal edit succeeded</string>
    <string name="edit_meal">Edit meal</string>
    <string name="save">Save</string>

    <string name="text">text</string>
    <string name="calories">calories</string>
    <string name="weight">weight</string>

    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="snack">snack</string>

    <string name="click_to_edit">Click to edit</string>

    <string name="meal_params_are_invalid">meal params are invalid</string>

    <string name="meal_weight_placeholder"><b>weight: </b></string>
    <string name="meal_calories_placeholder"><b>calories: </b></string>

    <string name="do_you_want_to_delete_meal">Do you want to permanently delete meal?</string>

    <string name="define_daily_calories">Define daily calories</string>
    <string name="please_set_daily_calories">Please set daily calories</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    
    <string name="meal_transition_name">meal transition</string>

    <!-- end of regular flow -->

    <!-- manager flow -->

    <string name="no_users_to_show">no users to show</string>
    <string name="users">Users</string>

    <!-- end of manager flow -->

    <!-- admin flow -->

    <string name="upgrade">upgrade</string>
    <string name="downgrade">downgrade</string>

    <string name="upgraded">upgraded</string>
    <string name="downgraded">downgraded</string>

    <string name="failed_to_load_users">Failed to load users</string>

    <!-- end of admin flow -->

    <!-- common -->

    <string name="apply">apply</string>
    <string name="update_succeed">update succeed</string>
    <string name="update_failed">update failed</string>

    <string name="upgrade_fail">upgrade fail</string>
    <string name="downgrade_fail">downgrade fail</string>

    <string name="regular">regular</string>
    <string name="manager">manager</string>
    <string name="admin">admin</string>

    <string name="from">from</string>
    <string name="to">to</string>

    <string name="processing">Processing</string>

    <string name="log_out">Log out</string>

    <!-- end of common -->

</resources>
