<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|top"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mealTextEditText"
                android:hint="@string/text"
                style="@style/regEditTextStyle"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mealCaloriesEditText"
                android:hint="@string/calories"
                style="@style/regEditTextStyle"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mealWeightEditText"
                android:hint="@string/weight"
                style="@style/regEditTextStyle"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addMealButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_meal"
            style="@style/AppButtonStyle"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/timePickerFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</FrameLayout>
