<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".presentation.auth.registration.RegisterUserActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/AppAuthEditTextStyle"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_email"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/AppAuthEditTextStyle"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_lock"
                />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:text="@string/sign_in"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"
            style="@style/AppButtonStyle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/openRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAllCaps="false"
            android:text="@string/do_not_have_account"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <include layout="@layout/progress_layout"
        android:visibility="gone"/>

</FrameLayout>