<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:padding="@dimen/padding_large"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/AppAuthEditTextStyle"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/white_transparent"
            app:srcCompat="@drawable/ic_email"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/AppAuthEditTextStyle"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/white_transparent"
            app:srcCompat="@drawable/ic_lock"
            />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:text="@string/sign_in"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_very_big"
        style="@style/AuthButtonStyle"
        />

</LinearLayout>